# termpad

./: Cargo.toml  README.md
src/: main.rs  term.rs
